Aggiornamento dipendenze
Sono state aggiornate le dipendenze:
- JavaSE-25 25.0.3
- JavaFX 25.0.3
- Gradle 9.5.1