@@ -32,6 +32,7 @@ javafx {
 
 application {
     mainClass = 'it.unicam.cs.mpgc.rpg125667.App'
+    applicationDefaultJvmArgs = ['--enable-native-access=javafx.graphics']
 }
 
 tasks.named('test') {
